GeneUtils: PanelDesign: replace BlastN scoring with ProbeQualityProfile